[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16.0"